--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,14 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   dio: ^5.5.1
+  bruno: ^3.4.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
   pretty_dio_logger: ^1.3.1
+
 
 flutter:
   uses-material-design: true
