--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,6 +1,7 @@
 gradle-wrapper.jar
 /.gradle
 /captures/
+gradle/wrapper/*.zip
 /gradlew
 /gradlew.bat
 /local.properties
@@ -11,3 +12,4 @@ GeneratedPluginRegistrant.java
 key.properties
 **/*.keystore
 **/*.jks
+*.zip
