--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,11 @@
 allprojects {
     repositories {
-        google()
-        mavenCentral()
+//        google()
+//        mavenCentral()
+        maven{url 'https://maven.aliyun.com/repository/google' }
+        maven{url 'https://maven.aliyun.com/repository/google-plugin' }
+        maven{url 'https://maven.aliyun.com/repository/public' }
+        maven{url 'https://maven.aliyun.com/repository/jcenter' }
     }
 }
 
